--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "author": "Joel-Marc",
   "license": "ISC",
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@openzeppelin/contracts": "^5.0.2",
+    "@types/lodash": "^4.17.1",
     "dotenv": "^16.0.3",
-    "hardhat": "^2.12.4",
     "prettier": "^2.8.1",
     "prettier-plugin-solidity": "^1.1.0"
   },
   "dependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.1",
-    "ethers": "^5.7.2",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@safe-global/api-kit": "^2.3.1",
+    "@safe-global/protocol-kit": "^3.1.0",
+    "@safe-global/safe-core-sdk-types": "^4.1.0",
+    "ethers": "^6.7.1",
+    "hardhat": "^2.22.3",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "zksync-cli": "^1.5.1"
   }
